--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -30,7 +30,7 @@
 #ifdef VERSION_CN
 #define TEXT_NEW 0x7E, 0x7F, 0x82, 0x83, 0xFE, 0x80, 0x81, 0x84, 0x85, 0xFF
 #else
-#define TEXT_NEW _("NEW") // New File Text
+#define TEXT_NEW _("MIP") // New File Text
 #endif
 
 // Ingame Menu
@@ -38,8 +38,8 @@
 #define TEXT_PAUSE 0x86, 0x87, 0x8A, 0x8B, 0x8E, 0x8F, 0xFE, 0x88, 0x89, 0x8C, 0x8D, 0x90, 0x91, 0xFF
 #define TEXT_HUD_CONGRATULATIONS 0x3A, 0x3B, 0x3E, 0x3F, 0x42, 0x43, 0xFE, 0x3C, 0x3D, 0x40, 0x41, 0x44, 0x45, 0xFF
 #else
-#define TEXT_PAUSE _("PAUSE") // Pause text, Castle Courses
-#define TEXT_HUD_CONGRATULATIONS _("CONGRATULATIONS") // Course Complete Text, Bowser Courses
+#define TEXT_PAUSE _("FPAK") // Pause text, Castle Courses
+#define TEXT_HUD_CONGRATULATIONS _("SEYSONILTSAN") // Course Complete Text, Bowser Courses //TODO: Ì
 #endif
 
 #if defined(VERSION_JP) || defined(VERSION_SH)
@@ -150,65 +150,65 @@
 
 // Main Screens
 #define TEXT_MARIO _("MARIO") // View Score Menu
-#define TEXT_SELECT_FILE _("SELECT FILE")
-#define TEXT_CHECK_FILE _("CHECK FILE")
-#define TEXT_COPY_FILE _("COPY FILE")
-#define TEXT_ERASE_FILE _("ERASE FILE")
-#define TEXT_SOUND_SELECT _("SOUND SELECT")
+#define TEXT_SELECT_FILE _("FTXEY SAHENAT") //TODO: Ä
+#define TEXT_CHECK_FILE _("STEFTXAW SAHENAT") //TODO: Ä
+#define TEXT_COPY_FILE _("RI'IRIT NGOP") //TODO: Ì
+#define TEXT_ERASE_FILE _("'AKU SAHENAT") //TODO: ' and Ä
+#define TEXT_SOUND_SELECT _("FYA'O PAMA") //TODO: ' and Ä
 
-#define TEXT_FILE_MARIO_A _("MARIO A")
-#define TEXT_FILE_MARIO_B _("MARIO B")
-#define TEXT_FILE_MARIO_C _("MARIO C")
-#define TEXT_FILE_MARIO_D _("MARIO D")
+#define TEXT_FILE_MARIO_A _("MARIO 1") // A
+#define TEXT_FILE_MARIO_B _("MARIO 2") // B
+#define TEXT_FILE_MARIO_C _("MARIO 3") // C
+#define TEXT_FILE_MARIO_D _("MARIO 4") // D
 
 // Menu Options
-#define TEXT_SCORE _("SCORE")
-#define TEXT_COPY _("COPY")
-#define TEXT_ERASE _("ERASE")
+#define TEXT_SCORE _("HOLPXAY")
+#define TEXT_COPY _("RÌ'ÌR")
+#define TEXT_ERASE _("'AKU")
 
 // Sound Options
-#define TEXT_STEREO _("STEREO")
-#define TEXT_MONO _("MONO")
-#define TEXT_HEADSET _("HEADSET")
+#define TEXT_STEREO _("MESIM")
+#define TEXT_MONO _("'AWA TSIM")
+#define TEXT_HEADSET _("MEMIKYUNSÌN")
 
 // Misc Menu Text
 #define TEXT_SAVED_DATA_EXISTS _("SAVED DATA EXITS") // Misspell
 #define TEXT_NO_SAVED_DATA_EXISTS _("NO SAVED DATA EXISTS")
 
 // Inside a Menu
-#define TEXT_RETURN _("RETURN")
-#define TEXT_CHECK_SCORE _("CHECK SCORE")
-#define TEXT_COPY_FILE_BUTTON _("COPY FILE")
-#define TEXT_ERASE_FILE_BUTTON _("ERASE FILE")
+#define TEXT_RETURN _("TATXAW") // TODO: Ä
+#define TEXT_CHECK_SCORE _("STEFTXAW")
+#define TEXT_COPY_FILE_BUTTON _("NGOP RI'IRIT") //TODO Ì and '
+#define TEXT_ERASE_FILE_BUTTON _("'AKU SAHENAT") //TODO: ' and Ä
 
 // Score Menu
 #define TEXT_HI_SCORE _("HI SCORE")
 #define TEXT_MY_SCORE _("MY SCORE")
 // Score Mario Text ("☺" is the Mario face defined in the US/EU menu char table)
-#define TEXT_SCORE_MARIO_A _("☺A")
-#define TEXT_SCORE_MARIO_B _("☺B")
-#define TEXT_SCORE_MARIO_C _("☺C")
-#define TEXT_SCORE_MARIO_D _("☺D")
+#define TEXT_SCORE_MARIO_A _("☺1") // A
+#define TEXT_SCORE_MARIO_B _("☺2") // B
+#define TEXT_SCORE_MARIO_C _("☺3") // C
+#define TEXT_SCORE_MARIO_D _("☺4") // D
 
 // Copy Menu
-#define TEXT_COPY_IT_TO_WHERE _("COPY IT TO WHERE?")
-#define TEXT_COPYING_COMPLETED _("COPYING COMPLETED")
-#define TEXT_NO_FILE_TO_COPY_FROM _("NO EMPTY FILE")
+#define TEXT_COPY_IT_TO_WHERE _("PESENGNE?")
+#define TEXT_COPYING_COMPLETED _("LU HASEY")
+#define TEXT_NO_FILE_TO_COPY_FROM _("KEA SAHENA AMEK") //TODO: Ä
 
 // Erase Menu
-#define TEXT_SURE _("SURE?")
-#define TEXT_YES _("YES")
-#define TEXT_NO _("NO")
-#define TEXT_FILE_MARIO_A_JUST_ERASED _("MARIO A JUST ERASED")
+#define TEXT_SURE _("NINGAY?") //TODO: Ì
+#define TEXT_YES _("SRANE")
+#define TEXT_NO _("KEHE")
+#define TEXT_FILE_MARIO_A_JUST_ERASED _("MARIOT A1 'IMAKU") //TODO: Ì
 
 /**
  * Menus Text (Pause, Course Completed)
  */
 // Main Courses
-#define TEXT_COURSE _("COURSE")
-#define TEXT_MYSCORE _("MYSCORE")
-#define TEXT_CONTINUE _("CONTINUE")
-#define TEXT_EXIT_COURSE _("EXIT COURSE")
+#define TEXT_COURSE _("FYA'O") //TODO: '
+#define TEXT_MYSCORE _("OEY PUM")
+#define TEXT_CONTINUE _("SALEW")
+#define TEXT_EXIT_COURSE _("HUM FYA'OFTU") //TODO: '
 #ifndef VERSION_EU // "R" text is different in EU
 #define TEXT_CAMERA_ANGLE_R _("SET CAMERA ANGLE WITH R")
 #endif
@@ -225,22 +225,22 @@
 #define TEXT_HUD_HI_SCORE _("HI SCORE")
 
 // Save Options
-#define TEXT_SAVE_AND_CONTINUE _("SAVE & CONTINUE")
-#define TEXT_SAVE_AND_QUIT _("SAVE & QUIT")
-#define TEXT_CONTINUE_WITHOUT_SAVING _("CONTINUE, DON'T SAVE")
+#define TEXT_SAVE_AND_CONTINUE _("SWEYN SI SALEW") //TODO: Ì
+#define TEXT_SAVE_AND_QUIT _("SWEYN SI HUM") //TODO: Ì
+#define TEXT_CONTINUE_WITHOUT_SAVING _("SALEW, RA'A SWEYN") //TODO: Ä and '
 
 /**
  * Ending Peach cutscene text.
  */
-#define TEXT_FILE_MARIO_EXCLAMATION _("Mario!")
-#define TEXT_POWER_STARS_RESTORED __("The power of the Stars is restored to the castle...")
-#define TEXT_THANKS_TO_YOU __("...and it's all thanks to you!")
-#define TEXT_THANK_YOU_MARIO __("Thank you, Mario!")
-#define TEXT_SOMETHING_SPECIAL __("We have to do something special for you...")
-#define TEXT_LISTEN_EVERYBODY _("Listen, everybody,")
-#define TEXT_LETS_HAVE_CAKE _("let's bake a delicious cake...")
-#define TEXT_FOR_MARIO _("...for Mario...")
-#define TEXT_FILE_MARIO_QUESTION _("Mario!")
+#define TEXT_FILE_MARIO_EXCLAMATION _("Ma Mario!")
+#define TEXT_POWER_STARS_RESTORED __("Tswal sanhìyä lu txintsengur nìmun...")
+#define TEXT_THANKS_TO_YOU __("...ngatalun nìwotx!")
+#define TEXT_THANK_YOU_MARIO __("Irayo, ma Mario!")
+#define TEXT_SOMETHING_SPECIAL __("Fpi nga zene kemo azey sivi...")
+#define TEXT_LISTEN_EVERYBODY _("Tìng mikyun, ma frapo,")
+#define TEXT_LETS_HAVE_CAKE _("kalina tsyosuti aftxìlor 'em ko...")
+#define TEXT_FOR_MARIO _("...fpi Mario...")
+#define TEXT_FILE_MARIO_QUESTION _("Ma Mario!")
 
 #endif
 
