--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -38,8 +38,8 @@
 #define TEXT_PAUSE 0x86, 0x87, 0x8A, 0x8B, 0x8E, 0x8F, 0xFE, 0x88, 0x89, 0x8C, 0x8D, 0x90, 0x91, 0xFF
 #define TEXT_HUD_CONGRATULATIONS 0x3A, 0x3B, 0x3E, 0x3F, 0x42, 0x43, 0xFE, 0x3C, 0x3D, 0x40, 0x41, 0x44, 0x45, 0xFF
 #else
-#define TEXT_PAUSE _("FPAK") // Pause text, Castle Courses
-#define TEXT_HUD_CONGRATULATIONS _("SEYSONILTSAN") // Course Complete Text, Bowser Courses //TODO: Ì
+#define TEXT_PAUSE _("FPERAK") // Pause text, Castle Courses
+#define TEXT_HUD_CONGRATULATIONS _("SEYSONÌLTSAN") // Course Complete Text, Bowser Courses //TODO: Ì
 #endif
 
 #if defined(VERSION_JP) || defined(VERSION_SH)
@@ -150,11 +150,11 @@
 
 // Main Screens
 #define TEXT_MARIO _("MARIO") // View Score Menu
-#define TEXT_SELECT_FILE _("FTXEY SAHENAT") //TODO: Ä
-#define TEXT_CHECK_FILE _("STEFTXAW SAHENAT") //TODO: Ä
-#define TEXT_COPY_FILE _("RI'IRIT NGOP") //TODO: Ì
-#define TEXT_ERASE_FILE _("'AKU SAHENAT") //TODO: ' and Ä
-#define TEXT_SOUND_SELECT _("FYA'O PAMA") //TODO: ' and Ä
+#define TEXT_SELECT_FILE _("FTXEY SÄHENAT")
+#define TEXT_CHECK_FILE _("STEFTXAW SÄHENAT")
+#define TEXT_COPY_FILE _("RÌ'ÌRIT NGOP")
+#define TEXT_ERASE_FILE _("'AKU SÄHENAT")
+#define TEXT_SOUND_SELECT _("FYA'O PAMÄ")
 
 #define TEXT_FILE_MARIO_A _("MARIO 1") // A
 #define TEXT_FILE_MARIO_B _("MARIO 2") // B
@@ -162,7 +162,7 @@
 #define TEXT_FILE_MARIO_D _("MARIO 4") // D
 
 // Menu Options
-#define TEXT_SCORE _("HOLPXAY")
+#define TEXT_SCORE _("AYHOLPXAY")
 #define TEXT_COPY _("RÌ'ÌR")
 #define TEXT_ERASE _("'AKU")
 
@@ -172,18 +172,18 @@
 #define TEXT_HEADSET _("MEMIKYUNSÌN")
 
 // Misc Menu Text
-#define TEXT_SAVED_DATA_EXISTS _("SAVED DATA EXITS") // Misspell
-#define TEXT_NO_SAVED_DATA_EXISTS _("NO SAVED DATA EXISTS")
+#define TEXT_SAVED_DATA_EXISTS _("FÌSÄHENA LU TEYA")
+#define TEXT_NO_SAVED_DATA_EXISTS _("FÌSÄHENA LU MEK")
 
 // Inside a Menu
-#define TEXT_RETURN _("TATXAW") // TODO: Ä
+#define TEXT_RETURN _("TÄTXAW")
 #define TEXT_CHECK_SCORE _("STEFTXAW")
-#define TEXT_COPY_FILE_BUTTON _("NGOP RI'IRIT") //TODO Ì and '
-#define TEXT_ERASE_FILE_BUTTON _("'AKU SAHENAT") //TODO: ' and Ä
+#define TEXT_COPY_FILE_BUTTON _("NGOP RÌ'ÌRIT")
+#define TEXT_ERASE_FILE_BUTTON _("'AKU SÄHENAT")
 
 // Score Menu
-#define TEXT_HI_SCORE _("HI SCORE")
-#define TEXT_MY_SCORE _("MY SCORE")
+#define TEXT_HI_SCORE _("SWEYA SÄRO'A")
+#define TEXT_MY_SCORE _("OEYÄ SÄRO'A")
 // Score Mario Text ("☺" is the Mario face defined in the US/EU menu char table)
 #define TEXT_SCORE_MARIO_A _("☺1") // A
 #define TEXT_SCORE_MARIO_B _("☺2") // B
@@ -193,41 +193,41 @@
 // Copy Menu
 #define TEXT_COPY_IT_TO_WHERE _("PESENGNE?")
 #define TEXT_COPYING_COMPLETED _("LU HASEY")
-#define TEXT_NO_FILE_TO_COPY_FROM _("KEA SAHENA AMEK") //TODO: Ä
+#define TEXT_NO_FILE_TO_COPY_FROM _("KEA SÄHENA AMEK")
 
 // Erase Menu
-#define TEXT_SURE _("NINGAY?") //TODO: Ì
+#define TEXT_SURE _("NÌNGAY?")
 #define TEXT_YES _("SRANE")
 #define TEXT_NO _("KEHE")
-#define TEXT_FILE_MARIO_A_JUST_ERASED _("MARIOT A1 'IMAKU") //TODO: Ì
+#define TEXT_FILE_MARIO_A_JUST_ERASED _("'ÌMAKU PUMIT A1VE") // check MARIO_ERASED_VAR and erase_menu_display_message() when editing this
 
 /**
  * Menus Text (Pause, Course Completed)
  */
 // Main Courses
-#define TEXT_COURSE _("FYA'O") //TODO: '
-#define TEXT_MYSCORE _("OEY PUM")
+#define TEXT_COURSE _("FYA'O")
+#define TEXT_MYSCORE _("OEYÄ SÄRO'A")
 #define TEXT_CONTINUE _("SALEW")
-#define TEXT_EXIT_COURSE _("HUM FYA'OFTU") //TODO: '
+#define TEXT_EXIT_COURSE _("HUM FYA'OFTU")
 #ifndef VERSION_EU // "R" text is different in EU
-#define TEXT_CAMERA_ANGLE_R _("SET CAMERA ANGLE WITH R")
+#define TEXT_CAMERA_ANGLE_R _("FTXEY FYA'OT A NÌN FA [R]")
 #endif
 
 // Camera Options
 #define TEXT_LAKITU_MARIO _("LAKITU + MARIO")
-#define TEXT_LAKITU_STOP _("LAKITU + STOP")
-#define TEXT_NORMAL_UPCLOSE __("(NORMAL)(UP-CLOSE)")
-#define TEXT_NORMAL_FIXED __("(NORMAL)(FIXED)")
+#define TEXT_LAKITU_STOP _("LAKITU + FTANG")
+#define TEXT_NORMAL_UPCLOSE __("(LETRRTRR)(SIM)")
+#define TEXT_NORMAL_FIXED __("(LETRRTRR)(KETSUKHIPX)")
 
 // Course Completed Misc Text
-#define TEXT_CATCH _("CATCH")
-#define TEXT_CLEAR _("CLEAR")
-#define TEXT_HUD_HI_SCORE _("HI SCORE")
+#define TEXT_CATCH _("CATCH") //UNUSED
+#define TEXT_CLEAR _("LU HASEY")
+#define TEXT_HUD_HI_SCORE _("SÄTSAN'UL")
 
 // Save Options
-#define TEXT_SAVE_AND_CONTINUE _("SWEYN SI SALEW") //TODO: Ì
-#define TEXT_SAVE_AND_QUIT _("SWEYN SI HUM") //TODO: Ì
-#define TEXT_CONTINUE_WITHOUT_SAVING _("SALEW, RA'A SWEYN") //TODO: Ä and '
+#define TEXT_SAVE_AND_CONTINUE _("SWEYN SÌ SALEW")
+#define TEXT_SAVE_AND_QUIT _("SWEYN SÌ HUM")
+#define TEXT_CONTINUE_WITHOUT_SAVING _("SALEW, RÄ'Ä SWEYN")
 
 /**
  * Ending Peach cutscene text.
